--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
             logging: 'promtail'
             logging_jobname: 'nginx_container_logs'
         volumes:
+#            - ./www:/usr/share/nginx/html
             - ./config/nginx.conf:/etc/nginx/nginx.conf
             - ./logs/nginx/access.log:/var/log/nginx/access.log
             - ./logs/nginx/error.log:/var/log/nginx/error.log
